# json-c

./: .gitignore  CMakeLists.txt  COPYING
include/json-c/: json.h  json_object.h
src/: arraylist.c  config.h  json_c_version.c  json_object.c  json_object_iterator.c  json_pointer.c  json_tokener.c  json_util.c  json_visit.c  libjson.c  linkhash.c  printbuf.c
test/: CMakeLists.txt  test.c
